# LabDevops-back

./: Dockerfile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: deploy.yml  run-tests.yml  validate.yml
src/: main.py
tests/: acceptance_test.py
