[project]
name = "LabDevops-api"
version = "0.1.0"
description = "A sample project to learn CI/CD"
authors = [{ name = "Eduardo Bray", email = "ed.bray@duocuc.cl" }]
requires-python = ">=3.13"
readme = "README.md"
dependencies = [
    "annotated-types >=0.7.0,<1.0",
    "anyio >=4.11.0,<5.0",
    "certifi >=2025.8.3,<2026.0",
    "click >=8.3.0,<9.0",
    "dnspython >=2.8.0,<3.0",
    "email-validator >=2.3.0,<3.0",
    "fastapi >=0.120,<0.130",
    "fastapi-cli >=0.0.13,<0.1.0",
    "fastapi-cloud-cli >=0.2.1,<0.3.0",
    "h11 >=0.16.0,<1.0",
    "httpcore >=1.0.9,<2.0",
    "httptools >=0.6.4,<1.0",
    "httpx >=0.28.1,<1.0",
    "idna >=3.10,<4.0",
    "Jinja2 >=3.1.6,<4.0",
    "markdown-it-py >=4.0.0,<5.0",
    "MarkupSafe >=3.0.3,<4.0",
    "mdurl >=0.1.2,<0.2",
    "pydantic >=2.11.9,<3.0",
    "pydantic_core >=2.33.2,<3.0",
    "Pygments >=2.19.2,<3.0",
    "python-dotenv >=1.1.1,<2.0",
    "python-multipart >=0.0.20,<1.0",
    "PyYAML >=6.0.3,<7.0",
    "rich >=14.1.0,<15.0",
    "rich-toolkit >=0.15.1,<1.0",
    "rignore >=0.6.4,<1.0",
    "sentry-sdk >=2.39.0,<3.0",
    "shellingham >=1.5.4,<2.0",
    "sniffio >=1.3.1,<2.0",
    "starlette >=0.48.0,<0.50",
    "typer >=0.19.2,<0.20",
    "typing-inspection >=0.4.1,<0.5",
    "typing_extensions >=4.15.0,<5.0",
    "urllib3 >=2.5.0,<3.0",
    "uvicorn >=0.37.0,<1.0",
    "uvloop >=0.21.0,<1.0",
    "watchfiles >=1.1.0,<2.0",
    "websockets >=15.0.1,<16.0",
]

[dependency-groups]
dev = [
    "black >=25.9.0,<26.0.0",
    "coverage >=7.10,<8.0",
    "pytest >=8.4,<9.0",
    "pytest-django >=4.11,<5.0",
    "ruff >=0.14.0,<0.15.0",
    "uv >=0.9.5",
]
tests = [
    "pytest >=8.4,<9.0",
    "pytest-django >=4.11,<5.0",
    "coverage >=7.10,<8.0",
    "pytest-cov >=7.0.0,<8.0",
]
lint = [
    "black >=25.9.0,<26.0.0",
    "ruff >=0.14.0,<0.15.0",
]
sonar = [
    "pysonar >=1.2.0.2419,<2.0",
]


[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.coverage.run]
omit = ["tests/*"]

[tool.coverage.html]
directory = "site/htmlcov"

[tool.uv]
package = false

[tool.black]
line-length = 88

[tool.sonar]
projectKey = "polirritmico_LabDevops-back"
organization = "polirritmico"
projectName = "LabDevops Back"
sources = "."
projectVersion = "0.1"
sourceEncoding = "UTF-8"
